# getoutlines

./: README.md  pyproject.toml
src/object_extractor/: __init__.py  cli.py
src/object_extractor/configs/: groundingdino_config.py
src/object_extractor/core/: __init__.py  detector.py  processor.py  visualizer.py
src/object_extractor/models/: __init__.py  sam_model.py
src/object_extractor/utils/: __init__.py  image_utils.py
